[metadata]
name = pytest-device-adapter
version = attr: device_adapter.__version__
description = Plugin for pytest to run tests which require interaction with real and simulated devices
long_description = file: README.rst
url = https://github.com/gopiotr/pytest-device-adapter
python_requires = ~=3.8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Quality Assurance
    Operating System :: Posix :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    =src
install_requires =
    marshmallow
    psutil
    pyserial
    pytest>=7.0.0
    PyYAML>=5.1

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    device_adapter = device_adapter.plugin

[flake8]
max-line-length = 120
ignore =
    # line break before binary operator
    W503,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

per-file-ignores =
    # imported but unused
    __init__.py: F401

[isort]
profile = black
src_paths = src,tests
filter_files = True
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
ignore_missing_imports = True
